# agentsmith

./: .dockerignore  .gitignore  README.md  pyproject.toml  startdocker.sh
.devcontainer/: devcontainer.json
agentsmith_collector/: __main__.py  daemon.py  incremental.py  parser.py  pusher.py  scanner.py  state.py
agentsmith_sdk/: __init__.py  context.py  logger.py  middleware.py  models.py
agentsmith_server/: app.py  database.py  schemas.py
agentsmith_server/routes/: ingest.py  query.py
agentsmith_web/: index.html  package-lock.json  package.json  vite.config.js
agentsmith_web/src/: App.css  App.jsx
agentsmith_web/src/components/: ConversationList.jsx  Dashboard.jsx  ErrorPage.jsx  RequestList.jsx  SpanDetail.jsx  SpanSummary.jsx
docker/: Dockerfile  docker-compose.yml
