[project]
name = "agentsmith"
version = "0.1.0"
description = "Agent 可观测性平台：SDK + Collector + Server + Web"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "sqlalchemy>=2.0.0",
    "pymysql>=1.1.0",
    "requests>=2.31.0",
    "langchain-core>=0.3.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
